# hkb

./: .gitignore  .nvim-dap.lua  Cargo.toml  Makefile  Readme.md
.git-hooks/: prepare-commit-msg
.github/workflows/: pr-checks.yml
hkb-client/: Cargo.toml
hkb-client/src/: app_state.rs  events.rs  focus.rs  main.rs  terminal.rs
hkb-client/src/apps/: main.rs  reminders.rs
hkb-client/src/components/: button.rs  input.rs  mod.rs  navigation.rs
hkb-core/: Cargo.toml
hkb-date/: Cargo.toml
hkb-date/grammar/: human_date.pest
hkb-date/src/: human_date_parsing.rs  lib.rs
hkb_cli/: Cargo.toml
hkb_cli/src/: main.rs
hkb_cli_habit/: Cargo.toml
hkb_cli_habit/src/: lib.rs
hkb_client/: .nvim-dap.lua  Cargo.toml
hkb_client/migrations/2024-04-23-193722_test/: up.sql
hkb_client/src/: app_state.rs  events.rs  main.rs  singleton.rs  terminal.rs  utils.rs
hkb_client/src/actions/: reminders.rs
hkb_client/src/apps/: main.rs  mod.rs  reminders.rs
hkb_client/src/apps/reminders/: reminders_create.rs  reminders_list.rs
hkb_client/src/components/: button.rs  image.rs  input.rs  mod.rs  navigation.rs
hkb_client/src/utils/: bounded_value.rs
hkb_core/: Cargo.toml  Makefile
hkb_core/migrations/2024-04-23-191606_create_reminders/: up.sql
hkb_core/src/: command.rs  lib.rs  logger.rs
hkb_core/src/algorithms/: huffman.rs  mod.rs
hkb_core/src/algorithms/huffman/: structs.rs  traits.rs
hkb_core/src/algorithms/huffman/snapshots/: hkb_core__algorithms__huffman__traits__tests__it_can_convert_char_to_binary_snap.snap
hkb_core/src/algorithms/snapshots/: hkb_core__algorithms__huffman__tests__it_generates_correct_snapshot.snap
hkb_core/src/data_structures/: binary_tree.rs  min_heap.rs  mod.rs
hkb_core/src/database/: mod.rs  schema.rs
hkb_core/src/database/models/: reminders.rs
hkb_core/src/database/services/: reminders.rs
hkb_core/src/decoders/: jpeg_decoder.rs  mod.rs
hkb_core/src/dtos/: reminders.rs
hkb_daemon/: Cargo.toml  Makefile
hkb_daemon/src/: audio.rs  main.rs
hkb_daemon_core/: Cargo.toml
hkb_daemon_core/src/: client.rs  frame.rs  lib.rs  server.rs  stream.rs
hkb_date/: Cargo.toml
hkb_date/grammar/: human_date.pest
hkb_date/src/: date.rs  duration.rs  human_date_parsing.rs  lib.rs
scripts/: install_git_hooks.sh
