[workspace]
resolver = "2"
members = [
    "hkb_core",
    "hkb_client",
    "hkb_date",
    "hkb_daemon",
    "hkb_daemon_core",
]

[workspace.dependencies]
dirs = { version = "5.0.1" }
thiserror = { version = "1.0.56" }
diesel_migrations = { version = "2.1.0" }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.117" }
rodio = { version = "0.18.0" }
proptest = { version = "0.9.6" }
parking_lot = { version = "0.12.1", features = ["send_guard"] }
