[package]
name = "hkb_client"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = { version = "0.27.0" }
ratatui = { version = "0.26.1" }
thiserror = { workspace = true }
parking_lot = { workspace = true }
hkb_date = { path = "../hkb_date", version = "0.1.0" }
hkb_core = { path = "../hkb_core", version = "0.1.0", features = ["sqlite-database"] }
