[package]
name = "hkb_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21" }
dirs = { version = "5.0.1" }
cfg-if = { version = "1.0.0" }
parking_lot = { workspace = true }
diesel = { version = "2.1.6", optional = true }
diesel_migrations = { version = "2.1.0", optional = true }
log4rs = { version = "1.3.0", features = ["pattern_encoder", "file_appender"] }

[features]
sqlite-database = ["dep:diesel_migrations", "diesel/sqlite"]
mysql-database = ["dep:diesel_migrations", "diesel/mysql"]
postgres-database = ["dep:diesel_migrations","diesel/postgres"]
