[package]
name = "hkb_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.21" }
cfg-if = { version = "1.0.0" }
dirs = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
serial_test = { version = "3.1.0" }
diesel = { version = "2.1.6", optional = true }
hkb_date = { path = "../hkb_date", version = "0.1.0" }
diesel_migrations = { version = "2.1.0", optional = true }
log4rs = { version = "1.3.0", features = ["pattern_encoder", "file_appender"] }

[dev-dependencies]
ctor = { version = "0.2.8" }

[features]
mysql-database = ["diesel/mysql", "diesel_migrations/mysql"]
sqlite-database = ["diesel/sqlite", "diesel/returning_clauses_for_sqlite_3_35", "diesel_migrations/sqlite"]
