[package]
name = "hkb_daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = { workspace = true }
tokio = { workspace = true }
rodio = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
diesel_migrations = { workspace = true }
notify-rust = { version = "4.11.0" }
hkb_date = { path = "../hkb_date", version = "0.1.0" }
hkb_daemon_core = { path = "../hkb_daemon_core", version = "0.1.0" }
hkb_core = { path = "../hkb_core", version = "0.1.0", features = ["sqlite-database"] }
