[package]
name = "hkb_date"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.9"
pest_derive = "2.7.9"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.37", features = ["rkyv-64", "serde"] }
thiserror = { workspace = true }

[features]
chrono = []
